# internal/handler/user.go
@@ -2,10 +2,10 @@ package handler
 
 import (
 	"github.com/gin-gonic/gin"
-	"shiliu/api/v1"
-	"shiliu/internal/service"
 	"go.uber.org/zap"
 	"net/http"
+	"shiliu/api/v1"
+	"shiliu/internal/service"
 )
 
 type UserHandler struct {
@@ -23,7 +23,7 @@ func NewUserHandler(handler *Handler, userService service.UserService) *UserHand
 // Register godoc
 // @Summary 用户注册
 // @Schemes
-// @Description 目前只支持邮箱登录
+// @Description 目前只支持用户名登录
 // @Tags 用户模块
 // @Accept json
 // @Produce json
@@ -97,32 +97,4 @@ func (h *UserHandler) GetProfile(ctx *gin.Context) {
 	}
 
 	v1.HandleSuccess(ctx, user)
-}
-
-// UpdateProfile godoc
-// @Summary 修改用户信息
-// @Schemes
-// @Description
-// @Tags 用户模块
-// @Accept json
-// @Produce json
-// @Security Bearer
-// @Param request body v1.UpdateProfileRequest true "params"
-// @Success 200 {object} v1.Response
-// @Router /user [put]
-func (h *UserHandler) UpdateProfile(ctx *gin.Context) {
-	userId := GetUserIdFromCtx(ctx)
-
-	var req v1.UpdateProfileRequest
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		v1.HandleError(ctx, http.StatusBadRequest, v1.ErrBadRequest, nil)
-		return
-	}
-
-	if err := h.userService.UpdateProfile(ctx, userId, &req); err != nil {
-		v1.HandleError(ctx, http.StatusInternalServerError, v1.ErrInternalServerError, nil)
-		return
-	}
-
-	v1.HandleSuccess(ctx, nil)
 }
